<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAllCaps="false"
    tools:context="com.nxp.nxp34663.hapticdemo.BasicActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="1dip"
            android:contentDescription="@string/strEmpty"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip">

            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:background="@drawable/button_rectangle"
                android:text="@string/strObj0"
                android:textAllCaps="false"
                android:theme="@style/AppTheme.ButtonStyle1"/>

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:background="@drawable/button_rectangle"
                android:text="@string/strObj1"
                android:textAllCaps="false"
                android:theme="@style/AppTheme.ButtonStyle1"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:background="@drawable/button_rectangle"
                android:text="@string/strObj2"
                android:textAllCaps="false"
                android:theme="@style/AppTheme.ButtonStyle1"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:background="@drawable/button_rectangle"
                android:text="@string/strObj3"
                android:textAllCaps="false"
                android:theme="@style/AppTheme.ButtonStyle1"/>

            <CheckBox
                android:id="@+id/checkBoxKeyupVibrating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/strEnKeyup"
                style="@style/CustomCheckboxTheme"
                android:checked="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip">

            <TextView
                android:id="@+id/keydown_tv1"
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/strKeyDownTime"/>

            <EditText
                android:id="@+id/KeyDownInput"
                android:labelFor="@+id/KeyDownInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:background="@drawable/editsharp"
                android:ems="3"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/keydown_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/strTimeUnit"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip">

            <TextView
                android:id="@+id/keyup_tv1"
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:text="@string/strKeyUpTime"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/KeyUpInput"
                android:labelFor="@+id/KeyUpInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:background="@drawable/editsharp"
                android:ems="3"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/keyup_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/strTimeUnit"/>
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
